Remove all paisajismo references, replace with jardinería

--- a/VERDEAGUA/site/public/contacto.html
+++ b/VERDEAGUA/site/public/contacto.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Contacto | VerdeAgua Paisajismo & Mantenimiento en Mallorca</title>
+    <title>Contacto | VerdeAgua Jardinería & Mantenimiento en Mallorca</title>
     <meta name="description"
-        content="Contacta con VerdeAgua para servicios de paisajismo y mantenimiento de propiedades de lujo en Mallorca. Solicita tu presupuesto.">
+        content="Contacta con VerdeAgua para servicios de jardinería y mantenimiento de propiedades en Mallorca. Solicita tu presupuesto.">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
@@ -337,7 +337,7 @@
                                 <select id="contactService"
                                     class="w-full bg-sandstone/30 border border-primary/10 rounded-lg py-3 px-4 focus:ring-primary focus:border-primary transition-all text-sm">
                                     <option value="" data-i18n="contact.form.serviceDefault">Seleccionar...</option>
-                                    <option value="jardineria" data-i18n="contact.form.svc1">Jardinería y Paisajismo
+                                    <option value="jardineria" data-i18n="contact.form.svc1">Jardinería y Mantenimiento
                                     </option>
                                     <option value="piscina" data-i18n="contact.form.svc2">Cuidado de Piscinas</option>
                                     <option value="reformas" data-i18n="contact.form.svc3">Reformas y Albañilería
@@ -404,7 +404,7 @@
                         data-i18n="footer.services">Servicios</h4>
                     <ul class="space-y-4 text-white/50 text-sm">
                         <li><a class="hover:text-white transition-colors" href="index.html#servicios"
-                                data-i18n="footer.svc.1">Paisajismo & Jardín</a></li>
+                                data-i18n="footer.svc.1">Jardinería & Jardín</a></li>
                         <li><a class="hover:text-white transition-colors" href="#" data-i18n="footer.svc.2">Cuidado de
                                 Piscinas</a></li>
                         <li><a class="hover:text-white transition-colors" href="#" data-i18n="footer.svc.3">Reformas y
