--- a/VERDEAGUA/site/public/index.html
+++ b/VERDEAGUA/site/public/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  <title>VerdeAgua | Paisajismo &amp; Mantenimiento de Lujo en Mallorca</title>
+  <title>VerdeAgua | Jardinería &amp; Mantenimiento en Mallorca</title>
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
@@ -252,8 +252,7 @@
           Transformamos tu propiedad en un paraíso mediterráneo
         </h1>
         <p class="text-white/90 text-lg lg:text-xl font-light mb-10 max-w-xl leading-relaxed">
-          Servicios exclusivos de paisajismo y mantenimiento integral en Mallorca. Calidad superior para las propiedades
-          más exigentes del archipiélago.
+          Servicios de jardinería y mantenimiento integral en Mallorca. Calidad y cercanía para tu propiedad.
         </p>
         <div class="flex flex-col sm:flex-row gap-4">
           <button
@@ -536,7 +535,7 @@
           <div
             class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent opacity-0 group-hover:opacity-100 transition-opacity p-6 flex flex-col justify-end">
             <p class="text-white font-bold text-xl">Villa Alcanada</p>
-            <p class="text-white/70 text-sm italic">Paisajismo y Piscina</p>
+            <p class="text-white/70 text-sm italic">Jardinería y Piscina</p>
           </div>
         </div>
         <div class="relative group overflow-hidden rounded-xl shadow-lg">
@@ -569,7 +568,7 @@
           <div
             class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent opacity-0 group-hover:opacity-100 transition-opacity p-6 flex flex-col justify-end">
             <p class="text-white font-bold text-xl">Estate Son Vida</p>
-            <p class="text-white/70 text-sm italic">Paisajismo de Vanguardia</p>
+            <p class="text-white/70 text-sm italic">Diseño de Jardín</p>
           </div>
         </div>
         <div class="relative group overflow-hidden rounded-xl shadow-lg">
@@ -622,7 +621,7 @@
           <h4 class="font-bold mb-8 uppercase tracking-widest text-sm text-primary" data-i18n="footer.services">
             Servicios</h4>
           <ul class="space-y-4 text-white/50 text-sm">
-            <li><a class="hover:text-white transition-colors" href="#servicios" data-i18n="footer.svc.1">Paisajismo
+            <li><a class="hover:text-white transition-colors" href="#servicios" data-i18n="footer.svc.1">Jardinería
                 &amp; Jardín</a></li>
             <li><a class="hover:text-white transition-colors" href="#" data-i18n="footer.svc.2">Cuidado de Piscinas</a>
             </li>
