--- a/VERDEAGUA/site/public/presupuesto.html
+++ b/VERDEAGUA/site/public/presupuesto.html
@@ -157,7 +157,7 @@
                                     <span class="material-symbols-outlined text-3xl">potted_plant</span>
                                 </div>
                                 <p class="font-bold text-primary" data-i18n="pres.svc.jardineria">Jardinería</p>
-                                <p class="text-sm text-primary/60 mt-1" data-i18n="pres.svc.jardineria.desc">Paisajismo
+                                <p class="text-sm text-primary/60 mt-1" data-i18n="pres.svc.jardineria.desc">Jardinería
                                     y mantenimiento experto</p>
                             </div>
                             <div class="absolute top-3 right-3 text-primary opacity-0 peer-checked:opacity-100">
