Optimize mobile responsiveness across all sections

--- a/VERDEAGUA/site/public/index.html
+++ b/VERDEAGUA/site/public/index.html
@@ -246,47 +246,48 @@
         data-alt="Luxurious Mediterranean garden with stone paths and vibrant flowers"
         src="https://lh3.googleusercontent.com/aida-public/AB6AXuAdyHW0R6eT-oQufKjyb-wVMA6DjLsNY1jwrFQ0AfU8wWvplTPQXTnv_4RSjQgz7lg-a22NhU0ejVWYZQNtj608n0SoKdE1muGySuHPnWsOHmViopGGAmOcoRDcSaZiVFmFOtSUxQuIJK2x2IcY5cq5x4X8A0lBSQrolDNqy9ZYbVqEzXXSPdAMRKTUZcwHSj65uJdPZXQD3mIIbvPHdkThRolgR_tUS5UgR17MoCwy55jWleESfTbvh9h1BUgqy6-DkX7oYODSonN0" />
     </div>
-    <div class="relative z-20 max-w-7xl mx-auto px-6 lg:px-12 w-full pt-20">
+    <div class="relative z-20 max-w-7xl mx-auto px-4 sm:px-6 lg:px-12 w-full pt-20">
       <div class="max-w-3xl">
-        <h1 class="serif-text text-white text-5xl lg:text-7xl font-black leading-tight mb-6">
+        <h1 class="serif-text text-white text-3xl sm:text-5xl lg:text-7xl font-black leading-tight mb-4 sm:mb-6">
           Transformamos tu propiedad en un paraíso mediterráneo
         </h1>
-        <p class="text-white/90 text-lg lg:text-xl font-light mb-10 max-w-xl leading-relaxed">
+        <p class="text-white/90 text-base sm:text-lg lg:text-xl font-light mb-8 sm:mb-10 max-w-xl leading-relaxed">
           Servicios de jardinería y mantenimiento integral en Mallorca. Calidad y cercanía para tu propiedad.
         </p>
         <div class="flex flex-col sm:flex-row gap-4">
           <button
-            class="bg-primary text-white px-8 py-4 rounded-lg font-bold hover:bg-primary/90 transition-all text-lg shadow-xl">
+            class="bg-primary text-white px-6 sm:px-8 py-3 sm:py-4 rounded-lg font-bold hover:bg-primary/90 transition-all text-base sm:text-lg shadow-xl">
             Solicitar Presupuesto
           </button>
           <button
-            class="border-2 border-white text-white px-8 py-4 rounded-lg font-bold hover:bg-white/10 transition-all text-lg backdrop-blur-sm">
+            class="border-2 border-white text-white px-6 sm:px-8 py-3 sm:py-4 rounded-lg font-bold hover:bg-white/10 transition-all text-base sm:text-lg backdrop-blur-sm">
             Ver Proyectos
           </button>
         </div>
       </div>
     </div>
     <!-- Trust Badges -->
-    <div class="absolute bottom-0 left-0 w-full bg-white/5 backdrop-blur-md border-t border-white/10 py-8 z-20">
-      <div class="max-w-7xl mx-auto px-6 lg:px-12 flex flex-wrap justify-between items-center gap-8">
-        <div class="flex flex-col">
-          <span class="text-white text-3xl font-bold tracking-tight">10+ Años</span>
-          <span class="text-white/60 text-xs uppercase tracking-widest font-semibold">Experiencia en el Sector</span>
+    <div class="absolute bottom-0 left-0 w-full bg-white/5 backdrop-blur-md border-t border-white/10 py-4 sm:py-8 z-20">
+      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-12 grid grid-cols-2 md:grid-cols-4 gap-4 sm:gap-8">
+        <div class="flex flex-col text-center md:text-left">
+          <span class="text-white text-xl sm:text-3xl font-bold tracking-tight">10+ Años</span>
+          <span class="text-white/60 text-[10px] sm:text-xs uppercase tracking-widest font-semibold">Experiencia en el
+            Sector</span>
         </div>
-        <div class="w-px h-10 bg-white/20 hidden md:block"></div>
-        <div class="flex flex-col">
-          <span class="text-white text-3xl font-bold tracking-tight">Zona Poniente</span>
-          <span class="text-white/60 text-xs uppercase tracking-widest font-semibold">Centro-Sur de Mallorca</span>
+        <div class="flex flex-col text-center md:text-left">
+          <span class="text-white text-xl sm:text-3xl font-bold tracking-tight">Zona Poniente</span>
+          <span class="text-white/60 text-[10px] sm:text-xs uppercase tracking-widest font-semibold">Centro-Sur de
+            Mallorca</span>
         </div>
-        <div class="w-px h-10 bg-white/20 hidden md:block"></div>
-        <div class="flex flex-col">
-          <span class="text-white text-3xl font-bold tracking-tight">Compromiso</span>
-          <span class="text-white/60 text-xs uppercase tracking-widest font-semibold">Atención Personalizada</span>
+        <div class="flex flex-col text-center md:text-left">
+          <span class="text-white text-xl sm:text-3xl font-bold tracking-tight">Compromiso</span>
+          <span class="text-white/60 text-[10px] sm:text-xs uppercase tracking-widest font-semibold">Atención
+            Personalizada</span>
         </div>
-        <div class="w-px h-10 bg-white/20 hidden md:block"></div>
-        <div class="flex flex-col">
-          <span class="text-white text-3xl font-bold tracking-tight">Mallorca</span>
-          <span class="text-white/60 text-xs uppercase tracking-widest font-semibold">Servicio Local</span>
+        <div class="flex flex-col text-center md:text-left">
+          <span class="text-white text-xl sm:text-3xl font-bold tracking-tight">Mallorca</span>
+          <span class="text-white/60 text-[10px] sm:text-xs uppercase tracking-widest font-semibold">Servicio
+            Local</span>
         </div>
       </div>
     </div>
@@ -315,7 +316,7 @@
               data-alt="Meticulously manicured luxury garden with olive trees"
               src="https://lh3.googleusercontent.com/aida-public/AB6AXuAkgbiZ-NERD7yl3oNlt9b5BVvKSo1PirG0gOenJ1tNAMB00iIyKERkDv47BCcVsKrRXzuz4WYMYb6iSI9bMhW9_ir09xBHWOK32ZuXAOCWsCUqoGkfjaD3yr3lz9WNPJ3-9ZvQn0rqm8nKVY0jgX2ZclSjzf36I2bf3JDY-inczxAIXBN3J6pBfOd_iOezwo-Wm-GhYS9OcYKYOLIflOk61PSskBC6NE4KABc774i1Yx0gKeZwmusD8HFgBnN-Y4lO5ktoiItBZD_x" />
           </div>
-          <div class="p-8">
+          <div class="p-5 sm:p-8">
             <div class="flex justify-between items-start mb-4">
               <div>
                 <h3 class="serif-text text-2xl font-bold text-primary mb-2" data-i18n="svc.1.title">Jardinería</h3>
@@ -340,7 +341,7 @@
               data-alt="Crystal clear infinity pool overlooking the Mediterranean sea"
               src="https://lh3.googleusercontent.com/aida-public/AB6AXuDcBcbdSc6PgN0XnS3Cf8W9OcBQjFwQU8H4IebzkLmmExhfw6PB_NEJQyDowrKaTSr08mzsGPtAOIPWQ0J6fCxgPnvxq2IDQRLFFa81V3uz-yXF3A8Nlj--8ZJNA4B-UR6yHoRfzQUo2ZXCHCiHBSXRfrvDpy6irpU9ctLeTmwuHQLuL7sa8Qq55nTL7hy1YMKp36h29SYMU0HoT7HmFMsVVu4Q37Xi8zvrB3FmeZiRFJuW-A9kD2LTrCcu5O9bNoY9ioVcYk7FE07a" />
           </div>
-          <div class="p-8">
+          <div class="p-5 sm:p-8">
             <div class="flex justify-between items-start mb-4">
               <div>
                 <h3 class="serif-text text-2xl font-bold text-primary mb-2" data-i18n="svc.2.title">Mantenimiento de
@@ -366,7 +367,7 @@
               data-alt="Modern architecture renovation with traditional stone elements"
               src="https://lh3.googleusercontent.com/aida-public/AB6AXuBTr4usrVgBD3MXF-uJNdId46kgyjwC40ywwtOm6gJKlVYE3N4wxEGgB9rckX2zXWM7Ui0-0HelCSr2FhcKs-y20qTEchXk3p3fwyWBJ63HkQT3GeuOkPkfniUn6lmuI1R9TUlMTAHI8jjA041KLtcKAwuDwS6cW7RUfJgMB1Ra637hksM3OwVcLgdopq_DVcJD4Rp2MxjeeozsyqSaaeZrVcKHVZl822zqzEBhg0wkHYZe2enZ0RltDFUqfuweuGZO8PdHhC6MAWiS" />
           </div>
-          <div class="p-8">
+          <div class="p-5 sm:p-8">
             <div class="flex justify-between items-start mb-4">
               <div>
                 <h3 class="serif-text text-2xl font-bold text-primary mb-2" data-i18n="svc.3.title">Reformas</h3>
@@ -390,7 +391,7 @@
               class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-700"
               src="gestion-integral.png" />
           </div>
-          <div class="p-8">
+          <div class="p-5 sm:p-8">
             <div class="flex justify-between items-start mb-4">
               <div>
                 <h3 class="serif-text text-2xl font-bold text-primary mb-2" data-i18n="svc.4.title">Mantenimiento</h3>
@@ -462,19 +463,20 @@
   </section>
 
   <!-- Why VerdeAgua -->
-  <section class="py-24 bg-primary text-white overflow-hidden relative">
-    <div class="absolute right-0 top-0 opacity-10 pointer-events-none">
+  <section class="py-12 sm:py-24 bg-primary text-white overflow-hidden relative">
+    <div class="absolute right-0 top-0 opacity-10 pointer-events-none hidden sm:block">
       <span class="material-symbols-outlined text-[400px]">eco</span>
     </div>
-    <div class="max-w-7xl mx-auto px-6 lg:px-12 relative z-10">
-      <div class="grid grid-cols-1 lg:grid-cols-2 gap-16 items-center">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-12 relative z-10">
+      <div class="grid grid-cols-1 lg:grid-cols-2 gap-10 sm:gap-16 items-center">
         <div>
-          <h2 class="serif-text text-4xl lg:text-5xl font-bold mb-8">Por qué elegir la excelencia de VerdeAgua</h2>
+          <h2 class="serif-text text-2xl sm:text-4xl lg:text-5xl font-bold mb-6 sm:mb-8">Por qué elegir la excelencia de
+            VerdeAgua</h2>
           <p class="text-white/80 text-lg mb-12 leading-relaxed">
             Entendemos que su propiedad en Mallorca es más que una casa; es un refugio. Nuestro equipo de profesionales
             altamente cualificados garantiza un servicio discreto, eficiente y de calidad insuperable.
           </p>
-          <div class="grid grid-cols-2 gap-8">
+          <div class="grid grid-cols-1 sm:grid-cols-2 gap-6 sm:gap-8">
             <div>
               <span class="material-symbols-outlined text-4xl mb-4 text-background-light/40">verified_user</span>
               <h4 class="text-xl font-bold mb-2">Garantía de Calidad</h4>
@@ -499,25 +501,25 @@
         </div>
         <div class="relative">
           <div class="rounded-2xl overflow-hidden shadow-2xl rotate-3">
-            <img alt="Luxury villa maintenance team at work" class="w-full h-[500px] object-cover"
+            <img alt="Luxury villa maintenance team at work" class="w-full h-[300px] sm:h-[500px] object-cover"
               data-alt="Professional landscaping team working on a high-end estate"
               src="https://lh3.googleusercontent.com/aida-public/AB6AXuBp1tc1UevCq0xd53m3imFr1rIInXEjt7-KxBf__JJ0ozAa1518XEq8CvHMzUwGkWB5jxVS2duAPF-F8E2q7TNh2apBEqn4pzoFnii7Bg7Pr5c14KfYBR2h5TWqwY0ZTJQrL04u1f73mImjF5ehtIDUR9FlBrVBrIu5gO3MvsZg_srbI9_c6NSy6TJ5WhMwc98QEFbFjPUAendmwUEEKHa5F75PkqQ_f_BjswjWXBn4aAMvtIIwq8uVzWtvIip6SThdVu-mVotHWBQT" />
           </div>
           <div
-            class="absolute -bottom-6 -left-6 bg-sandstone text-primary p-8 rounded-xl shadow-xl -rotate-3 border border-primary/10">
-            <div class="text-5xl font-black mb-1">98%</div>
-            <div class="text-sm font-bold uppercase tracking-widest opacity-70">Tasa de Retención</div>
+            class="absolute -bottom-4 -left-4 sm:-bottom-6 sm:-left-6 bg-sandstone text-primary p-5 sm:p-8 rounded-xl shadow-xl -rotate-3 border border-primary/10">
+            <div class="text-3xl sm:text-5xl font-black mb-1">98%</div>
+            <div class="text-xs sm:text-sm font-bold uppercase tracking-widest opacity-70">Tasa de Retención</div>
           </div>
         </div>
       </div>
     </div>
   </section>
   <!-- Portfolio Grid -->
-  <section class="py-24 bg-background-light" id="proyectos">
-    <div class="max-w-7xl mx-auto px-6 lg:px-12">
-      <div class="flex flex-col md:flex-row justify-between items-end mb-16 gap-6">
+  <section class="py-12 sm:py-24 bg-background-light" id="proyectos">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-12">
+      <div class="flex flex-col md:flex-row justify-between items-start md:items-end mb-8 sm:mb-16 gap-4 sm:gap-6">
         <div class="max-w-2xl">
-          <h2 class="serif-text text-primary text-4xl font-bold mb-4">Proyectos Destacados</h2>
+          <h2 class="serif-text text-primary text-2xl sm:text-4xl font-bold mb-3 sm:mb-4">Proyectos Destacados</h2>
           <p class="text-charcoal/60 text-lg">Una mirada a algunas de las transformaciones más exclusivas realizadas en
             Deià, Sóller, Andratx y Calvià.</p>
         </div>
