--- a/VERDEAGUA/site/public/index.html
+++ b/VERDEAGUA/site/public/index.html
@@ -248,19 +248,23 @@
     </div>
     <div class="relative z-20 max-w-7xl mx-auto px-4 sm:px-6 lg:px-12 w-full pt-20">
       <div class="max-w-3xl">
-        <h1 class="serif-text text-white text-3xl sm:text-5xl lg:text-7xl font-black leading-tight mb-4 sm:mb-6">
+        <h1 class="serif-text text-white text-3xl sm:text-5xl lg:text-7xl font-black leading-tight mb-4 sm:mb-6"
+          data-i18n="hero.title">
           Transformamos tu propiedad en un paraíso mediterráneo
         </h1>
-        <p class="text-white/90 text-base sm:text-lg lg:text-xl font-light mb-8 sm:mb-10 max-w-xl leading-relaxed">
+        <p class="text-white/90 text-base sm:text-lg lg:text-xl font-light mb-8 sm:mb-10 max-w-xl leading-relaxed"
+          data-i18n="hero.subtitle">
           Servicios de jardinería y mantenimiento integral en Mallorca. Calidad y cercanía para tu propiedad.
         </p>
         <div class="flex flex-col sm:flex-row gap-4">
           <button
-            class="bg-primary text-white px-6 sm:px-8 py-3 sm:py-4 rounded-lg font-bold hover:bg-primary/90 transition-all text-base sm:text-lg shadow-xl">
+            class="bg-primary text-white px-6 sm:px-8 py-3 sm:py-4 rounded-lg font-bold hover:bg-primary/90 transition-all text-base sm:text-lg shadow-xl"
+            data-i18n="hero.cta1">
             Solicitar Presupuesto
           </button>
           <button
-            class="border-2 border-white text-white px-6 sm:px-8 py-3 sm:py-4 rounded-lg font-bold hover:bg-white/10 transition-all text-base sm:text-lg backdrop-blur-sm">
+            class="border-2 border-white text-white px-6 sm:px-8 py-3 sm:py-4 rounded-lg font-bold hover:bg-white/10 transition-all text-base sm:text-lg backdrop-blur-sm"
+            data-i18n="hero.cta2">
             Ver Proyectos
           </button>
         </div>
@@ -270,23 +274,31 @@
     <div class="absolute bottom-0 left-0 w-full bg-white/5 backdrop-blur-md border-t border-white/10 py-4 sm:py-8 z-20">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-12 grid grid-cols-2 md:grid-cols-4 gap-4 sm:gap-8">
         <div class="flex flex-col text-center md:text-left">
-          <span class="text-white text-xl sm:text-3xl font-bold tracking-tight">10+ Años</span>
-          <span class="text-white/60 text-[10px] sm:text-xs uppercase tracking-widest font-semibold">Experiencia en el
+          <span class="text-white text-xl sm:text-3xl font-bold tracking-tight" data-i18n="trust.1.title">10+
+            Años</span>
+          <span class="text-white/60 text-[10px] sm:text-xs uppercase tracking-widest font-semibold"
+            data-i18n="trust.1.sub">Experiencia en el
             Sector</span>
         </div>
         <div class="flex flex-col text-center md:text-left">
-          <span class="text-white text-xl sm:text-3xl font-bold tracking-tight">Zona Poniente</span>
-          <span class="text-white/60 text-[10px] sm:text-xs uppercase tracking-widest font-semibold">Centro-Sur de
+          <span class="text-white text-xl sm:text-3xl font-bold tracking-tight" data-i18n="trust.2.title">Zona
+            Poniente</span>
+          <span class="text-white/60 text-[10px] sm:text-xs uppercase tracking-widest font-semibold"
+            data-i18n="trust.2.sub">Centro-Sur de
             Mallorca</span>
         </div>
         <div class="flex flex-col text-center md:text-left">
-          <span class="text-white text-xl sm:text-3xl font-bold tracking-tight">Compromiso</span>
-          <span class="text-white/60 text-[10px] sm:text-xs uppercase tracking-widest font-semibold">Atención
+          <span class="text-white text-xl sm:text-3xl font-bold tracking-tight"
+            data-i18n="trust.3.title">Compromiso</span>
+          <span class="text-white/60 text-[10px] sm:text-xs uppercase tracking-widest font-semibold"
+            data-i18n="trust.3.sub">Atención
             Personalizada</span>
         </div>
         <div class="flex flex-col text-center md:text-left">
-          <span class="text-white text-xl sm:text-3xl font-bold tracking-tight">Mallorca</span>
-          <span class="text-white/60 text-[10px] sm:text-xs uppercase tracking-widest font-semibold">Servicio
+          <span class="text-white text-xl sm:text-3xl font-bold tracking-tight"
+            data-i18n="trust.4.title">Mallorca</span>
+          <span class="text-white/60 text-[10px] sm:text-xs uppercase tracking-widest font-semibold"
+            data-i18n="trust.4.sub">Servicio
             Local</span>
         </div>
       </div>
@@ -470,32 +482,37 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-12 relative z-10">
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-10 sm:gap-16 items-center">
         <div>
-          <h2 class="serif-text text-2xl sm:text-4xl lg:text-5xl font-bold mb-6 sm:mb-8">Por qué elegir la excelencia de
+          <h2 class="serif-text text-2xl sm:text-4xl lg:text-5xl font-bold mb-6 sm:mb-8" data-i18n="why.title">Por qué
+            elegir la excelencia de
             VerdeAgua</h2>
-          <p class="text-white/80 text-lg mb-12 leading-relaxed">
+          <p class="text-white/80 text-lg mb-12 leading-relaxed" data-i18n="why.desc">
             Entendemos que su propiedad en Mallorca es más que una casa; es un refugio. Nuestro equipo de profesionales
             altamente cualificados garantiza un servicio discreto, eficiente y de calidad insuperable.
           </p>
           <div class="grid grid-cols-1 sm:grid-cols-2 gap-6 sm:gap-8">
             <div>
               <span class="material-symbols-outlined text-4xl mb-4 text-background-light/40">verified_user</span>
-              <h4 class="text-xl font-bold mb-2">Garantía de Calidad</h4>
-              <p class="text-white/60 text-sm">Compromiso total con la calidad y los plazos acordados.</p>
+              <h4 class="text-xl font-bold mb-2" data-i18n="why.1.title">Garantía de Calidad</h4>
+              <p class="text-white/60 text-sm" data-i18n="why.1.desc">Compromiso total con la calidad y los plazos
+                acordados.</p>
             </div>
             <div>
               <span class="material-symbols-outlined text-4xl mb-4 text-background-light/40">schedule</span>
-              <h4 class="text-xl font-bold mb-2">24h Respuesta</h4>
-              <p class="text-white/60 text-sm">Atención inmediata para cualquier incidencia técnica.</p>
+              <h4 class="text-xl font-bold mb-2" data-i18n="why.2.title">24h Respuesta</h4>
+              <p class="text-white/60 text-sm" data-i18n="why.2.desc">Atención inmediata para cualquier incidencia
+                técnica.</p>
             </div>
             <div>
               <span class="material-symbols-outlined text-4xl mb-4 text-background-light/40">local_florist</span>
-              <h4 class="text-xl font-bold mb-2">Eco-Consciente</h4>
-              <p class="text-white/60 text-sm">Uso responsable del agua y productos biodegradables.</p>
+              <h4 class="text-xl font-bold mb-2" data-i18n="why.3.title">Eco-Consciente</h4>
+              <p class="text-white/60 text-sm" data-i18n="why.3.desc">Uso responsable del agua y productos
+                biodegradables.</p>
             </div>
             <div>
               <span class="material-symbols-outlined text-4xl mb-4 text-background-light/40">lock</span>
-              <h4 class="text-xl font-bold mb-2">Privacidad</h4>
-              <p class="text-white/60 text-sm">Protocolos estrictos de discreción y seguridad.</p>
+              <h4 class="text-xl font-bold mb-2" data-i18n="why.4.title">Privacidad</h4>
+              <p class="text-white/60 text-sm" data-i18n="why.4.desc">Protocolos estrictos de discreción y seguridad.
+              </p>
             </div>
           </div>
         </div>
