--- a/VERDEAGUA/site/public/contacto.html
+++ b/VERDEAGUA/site/public/contacto.html
@@ -403,7 +403,8 @@
                     <h4 class="font-bold mb-8 uppercase tracking-widest text-sm text-primary"
                         data-i18n="footer.services">Servicios</h4>
                     <ul class="space-y-4 text-white/50 text-sm">
-
+                        <li><a class="hover:text-white transition-colors" href="index.html#servicios"
+                                data-i18n="footer.svc.1">Jardinería</a></li>
                         <li><a class="hover:text-white transition-colors" href="#" data-i18n="footer.svc.2">Cuidado de
                                 Piscinas</a></li>
                         <li><a class="hover:text-white transition-colors" href="#" data-i18n="footer.svc.3">Reformas y
