Remove Diseño creación from Jardinería service description

--- a/VERDEAGUA/site/public/index.html
+++ b/VERDEAGUA/site/public/index.html
@@ -332,8 +332,8 @@
             <div class="flex justify-between items-start mb-4">
               <div>
                 <h3 class="serif-text text-2xl font-bold text-primary mb-2" data-i18n="svc.1.title">Jardinería</h3>
-                <p class="text-charcoal/60 leading-relaxed" data-i18n="svc.1.desc">Diseño, creación y mantenimiento
-                  integral de jardines, poda
+                <p class="text-charcoal/60 leading-relaxed" data-i18n="svc.1.desc">Mantenimiento integral de jardines,
+                  poda
                   de altura y sistemas de riego.</p>
               </div>
 
