--- a/VERDEAGUA/site/public/contacto.html
+++ b/VERDEAGUA/site/public/contacto.html
@@ -380,7 +380,7 @@
                 data-i18n="contact.map.title">Nuestra zona de cobertura</h2>
             <div class="rounded-2xl overflow-hidden shadow-lg border border-primary/5 h-[300px] sm:h-[400px]">
                 <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d98000!2d2.45!3d39.55!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x129793280b1e7c51%3A0x400f3a2d50571e0!2sCalvi%C3%A0%2C%20Illes%20Balears!5e0!3m2!1ses!2ses!4v1708000000000!5m2!1ses!2ses"
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d98000!2d2.5!3d39.55!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x129793280b1e7c51%3A0x400f3a2d50571e0!2sCalvi%C3%A0%2C%20Illes%20Balears%2C%20Spain!5e0!3m2!1ses!2ses!4v1708000000000!5m2!1ses!2ses"
                     width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
