--- a/VERDEAGUA/site/public/index.html
+++ b/VERDEAGUA/site/public/index.html
@@ -257,16 +257,16 @@
           Servicios de jardinería y mantenimiento integral en Mallorca. Calidad y cercanía para tu propiedad.
         </p>
         <div class="flex flex-col sm:flex-row gap-4">
-          <button
-            class="bg-primary text-white px-6 sm:px-8 py-3 sm:py-4 rounded-lg font-bold hover:bg-primary/90 transition-all text-base sm:text-lg shadow-xl"
+          <a href="presupuesto.html"
+            class="bg-primary text-white px-6 sm:px-8 py-3 sm:py-4 rounded-lg font-bold hover:bg-primary/90 transition-all text-base sm:text-lg shadow-xl text-center no-underline"
             data-i18n="hero.cta1">
             Solicitar Presupuesto
-          </button>
-          <button
-            class="border-2 border-white text-white px-6 sm:px-8 py-3 sm:py-4 rounded-lg font-bold hover:bg-white/10 transition-all text-base sm:text-lg backdrop-blur-sm"
+          </a>
+          <a href="#proyectos"
+            class="border-2 border-white text-white px-6 sm:px-8 py-3 sm:py-4 rounded-lg font-bold hover:bg-white/10 transition-all text-base sm:text-lg backdrop-blur-sm text-center no-underline"
             data-i18n="hero.cta2">
             Ver Proyectos
-          </button>
+          </a>
         </div>
       </div>
     </div>
